Move handler registration into the handlers package.
This should not have meaningful impact on compile time, and should make
development faster by decreasing the number of places new handlers need
to be registered.

--- a/src/main/java/com/techcubing/server/BUILD
+++ b/src/main/java/com/techcubing/server/BUILD
@@ -9,16 +9,7 @@ java_binary(
     deps = [
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "//src/main/java/com/techcubing/server/framework:ServerStateInitializer",
-        "//src/main/java/com/techcubing/server/handlers:AddDeviceHandler",
-        "//src/main/java/com/techcubing/server/handlers:AddScramblesHandler",
-        "//src/main/java/com/techcubing/server/handlers:AdminResultsHandler",
-        "//src/main/java/com/techcubing/server/handlers:CompetitionsHandler",
-        "//src/main/java/com/techcubing/server/handlers:DeleteDeviceHandler",
-        "//src/main/java/com/techcubing/server/handlers:IndexHandler",
-        "//src/main/java/com/techcubing/server/handlers:ManageDevicesHandler",
-        "//src/main/java/com/techcubing/server/handlers:ManageScramblesHandler",
-        "//src/main/java/com/techcubing/server/handlers:OAuthRedirectHandler",
-        "//src/main/java/com/techcubing/server/handlers:SetCompetitionHandler",
+        "//src/main/java/com/techcubing/server/handlers",
         "//src/main/java/com/techcubing/server/services:TechCubingServiceImpl",
         "@io_grpc_grpc_java//core",
         "@io_grpc_grpc_java//protobuf",
