Add a @Handler annotation to make adding handlers easier.
This moves the definition of a handler's path into the file defining
that handler.

--- a/src/main/java/com/techcubing/server/handlers/BUILD
+++ b/src/main/java/com/techcubing/server/handlers/BUILD
@@ -29,6 +29,8 @@ java_library(
         "@commons_fileupload_commons_fileupload//jar",
         "@commons_io_commons_io//jar",
         "@javax_javaee_web_api//jar",
+        "@org_javassist_javassist//jar",
         "@org_freemarker_freemarker//jar",
+        "@org_reflections_reflections//jar",
     ],
 )
