Add command line flags.
This allows a toggle between WCA environments, and different template
locations, via the command line.

--- a/src/main/java/com/techcubing/server/BUILD
+++ b/src/main/java/com/techcubing/server/BUILD
@@ -7,10 +7,12 @@ java_binary(
         "@org_glassfish_jersey_core_jersey_common//jar",
     ],
     deps = [
+        "//src/main/java/com/techcubing/server/framework:CommandLineFlags",
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "//src/main/java/com/techcubing/server/framework:ServerStateInitializer",
         "//src/main/java/com/techcubing/server/handlers",
         "//src/main/java/com/techcubing/server/services:TechCubingServiceImpl",
+        "@com_github_pcj_google_options//jar",
         "@io_grpc_grpc_java//core",
         "@io_grpc_grpc_java//protobuf",
         "@io_grpc_grpc_services//jar",
