--- a/src/main/java/com/techcubing/server/BUILD
+++ b/src/main/java/com/techcubing/server/BUILD
@@ -20,5 +20,6 @@ java_binary(
     ],
     resources = [
         "//src/main/java/com/techcubing/server/templates",
+        "//:qrcode_js",
     ],
 )
