--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'io.grpc:grpc-protobuf-lite:1.14.0'
     implementation 'io.grpc:grpc-stub:1.14.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    api 'com.jakewharton:disklrucache:2.0.2'
     api 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
