Add an activity for releasing device.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
                     android:host="acquire_device"/>
             </intent-filter>
         </activity>
+        <activity android:name=".activities.ReleaseDeviceActivity"/>
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="barcode" />
