Make protodb non-static.

--- a/src/main/java/com/techcubing/server/BUILD
+++ b/src/main/java/com/techcubing/server/BUILD
@@ -8,12 +8,9 @@ java_binary(
         "@org_glassfish_jersey_core_jersey_common//jar",
     ],
     deps = [
-        "//src/main/java/com/techcubing/server/framework:CommandLineFlags",
-        "//src/main/java/com/techcubing/server/framework:ServerState",
-        "//src/main/java/com/techcubing/server/framework:ServerStateInitializer",
-        "//src/main/java/com/techcubing/server/framework:TechCubingInterceptor",
+        "//src/main/java/com/techcubing/server/framework",
         "//src/main/java/com/techcubing/server/handlers",
-        "//src/main/java/com/techcubing/server/services:TechCubingServiceImpl",
+        "//src/main/java/com/techcubing/server/services",
         "@com_github_pcj_google_options//jar",
         "@io_grpc_grpc_java//core",
         "@io_grpc_grpc_java//protobuf",
