--- a/src/main/java/com/techcubing/server/handlers/BUILD
+++ b/src/main/java/com/techcubing/server/handlers/BUILD
@@ -15,9 +15,7 @@ java_library(
         "//src/main/proto/wcif:event_java_proto",
         "//src/main/proto/wcif:person_java_proto",
         "//src/main/proto/wcif:round_java_proto",
-        "//src/main/java/com/techcubing/server/framework:ProtoDb",
-        "//src/main/java/com/techcubing/server/framework:ScorecardGenerator",
-        "//src/main/java/com/techcubing/server/framework:ServerState",
+        "//src/main/java/com/techcubing/server/framework",
         "//src/main/java/com/techcubing/server/util:OAuth",
         "//src/main/java/com/techcubing/server/util:ProtoUtil",
         "//src/main/java/com/techcubing/server/util:QueryParser",
